# sideseeing-tools

./: .gitignore  LICENSE  README.md  SECURITY.md  load.ipynb  pyproject.toml  tox.ini
.github/workflows/: main.yml
fixtures/dataset/: metadata.csv
fixtures/dataset/instance-001/: cell.csv  consumption.csv  gps.csv  labels.txt  metadata.json  sensors.one.csv  sensors.three.csv  sensors.three.uncalibrated.csv  wifi.csv
src/sideseeing_tools/: constants.py  exceptions.py  export-test.py  export-test2.py  export-test3.py  export.py  media.py  plot.py  sideseeing.py  utils.py  wifi-zones.ipynb  wifi.ipynb
src/sideseeing_tools/templates/: anonym.html  cell.html  geo.html  image.html  report.html  sensor.html  sidewalk-assessment.html  summary.html  template.css  template.html  template.js  template2.js  template_report.html  video.html  wifi.html
src/sideseeing_tools/templates/static/css/: custom.css
src/sideseeing_tools/templates/static/js/: custom.js  geo.js  map_utils.js  sensor.js  sidewalk_assessment.js  simple_sections.js  summary.js  wifi.js
tests/: test_media.py  test_sideseeing_ds.py  test_sideseeing_instance.py  test_utils.py
