[project]
name = "sideseeing-tools"
version = "0.1.4"
authors = [
  {name="Rafael J. P. Damaceno", email="rafael.damaceno@ime.usp.br"},
]
description = "A set of tools to load, preprocess and analyze data collected through the MultiSensor Data Collection App"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "folium~=0.13.0",
  "imageio~=2.5.0",
  "librosa~=0.10.0",
  "matplotlib~=3.7.1",
  "numpy~=1.25.0",
  "opencv-python~=4.7.0.68",
  "pandas~=2.0.3",
  "reverse-geocode==1.6",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rafaelpezzuto/sideseeing-tools"
Issues = "https://github.com/rafaelpezzuto/sideseeing-tools/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
