[project]
name = "sideseeing-tools"
version = "0.4.0"
authors = [
  {name="Rafael J. P. Damaceno", email="rafael.damaceno@ime.usp.br"},
]
description = "A set of tools to load, preprocess and analyze data collected through the MultiSensor Data Collection App"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "folium",
  "imageio",
  "librosa",
  "matplotlib",
  "moviepy",
  "numpy",
  "opencv-python",
  "pandas",
  "reverse-geocode",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rafaelpezzuto/sideseeing-tools"
Issues = "https://github.com/rafaelpezzuto/sideseeing-tools/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
