[project]
name = "sideseeing-tools"
version = "0.10.0"
authors = [
  {name="Rafael J. P. Damaceno", email="rafael.damaceno@ime.usp.br"},
  {name="Renzo Filho", email="renzo.filho@usp.br"},
]
description = "A set of tools to load, preprocess and analyze data collected through the MultiSensor Data Collection App"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "decorator",
  "folium",
  "imageio",
  "librosa",
  "matplotlib",
  "moviepy>=2.0.0",
  "numpy",
  "opencv-python",
  "pandas",
  "reverse-geocode",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest",]

[project.urls]
Homepage = "https://github.com/rafaelpezzuto/sideseeing-tools"
Issues = "https://github.com/rafaelpezzuto/sideseeing-tools/issues"

[tool.pytest.ini_options]
testpaths = ["tests",]
python_files = ["test_*.py",]

[tool.setuptools.package-data]
"tests" = ["*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
